fix(list): fix spacing

--- a/src/components/List/ListHeader/_list-header.scss
+++ b/src/components/List/ListHeader/_list-header.scss
@@ -22,7 +22,7 @@
   }
 
   &--search {
-    padding: 0 1rem;
+    padding: 0 $spacing-05;
     height: rem(56px);
     display: flex;
     align-items: center;
